--- a/frontend/src/components/about/about.css
+++ b/frontend/src/components/about/about.css
@@ -57,3 +57,18 @@ button:hover {
     background-color: #dedede;
     color: #333;
 }
+
+#about h3 {
+    text-align: center;
+    font-size: 25px;
+}
+
+.toggler {
+    position: absolute;
+    background-color: #333;
+    cursor: pointer;
+    left: 0;
+    font-size: medium;
+    color: #fff;
+    margin-top: 0;
+}
